# spec-dock

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/spec_dock/: __init__.py  cli.py
src/spec_dock/assets/codex_skills/spec-driven-tdd-workflow/: SKILL.md
src/spec_dock/assets/github/workflows/: spec-dock-close.yml
src/spec_dock/assets/spec_dock/docs/: spec-dock-guide.md
src/spec_dock/assets/spec_dock/scripts/: spec-dock-close.sh
src/spec_dock/assets/spec_dock/templates/: plan.md
src/spec_dock/assets/spec_dock/templates/discussions/: _template.md
src/spec_dock/assets/specdoc/docs/: planning-guide.md
src/spec_dock/assets/specdoc/scripts/: specdoc-close.sh
src/spec_dock/assets/specdoc/templates/: design.md  plan.md  report.md  requirement.md
tests/: test_cli.py
