[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-dock"
version = "0.2.3"
description = "Scaffold a spec-driven planning workspace (.spec-dock) for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "spec-dock contributors" }]
dependencies = []

[project.scripts]
spec-dock = "spec_dock.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spec_dock = ["assets/**/*"]
